Resolve #17 by setting entire header as overflow auto on desktop

--- a/src/script/entries/demo/base.scss
+++ b/src/script/entries/demo/base.scss
@@ -51,15 +51,25 @@ code {
   color: $btn-color;
 }
 
+.header__content {
+  footer {
+    display: none;
+  }
+
+  @media(min-width: 960px) {
+    footer {
+      display: block;
+    }
+  }
+}
+
 footer {
   text-align: center;
   font-size: .75rem;
+  padding: 30px 0;
 
   @media(min-width: 960px) {
-    position: fixed;
-    width: 270px;
-    bottom: 50px;
-    float: left;
+    display: none;
   }
 }
 
